@@ -20,6 +20,9 @@ bzr-svn 0.5.0~rc2				UNRELEASED
 
    * Mark as compatible with Bazaar 1.11.
 
+   * Fix pointless commits when using roundtripping using revision 
+     properties. (#299943)
+
 bzr-svn 0.5.0~rc1			2008-12-08
 
   CHANGES
